# jpeg-compressor

./: CMakeLists.txt  Makefile
src/: encoder.cpp  jpge.cpp  jpge.cu  jpge.h  jpgeCUDA.cu
